update: string multi language

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -1,48 +1,47 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Rima Batombe</string>
-    <string name="onboarding_title_1">Willkommen bei\nUrVoice</string>
-    <string name="onboarding_description_1">Wir bieten Spracherkennung und Grammatikprüfung auf Englisch, um deine Fähigkeiten im öffentlichen Sprechen zu verbessern.</string>
-    <string name="onboarding_title_2">Eine App zur Analyse deiner Sprachfähigkeiten</string>
-    <string name="onboarding_description_2">Analysiere dein Sprechen mit generativer KI-Technologie.</string>
-    <string name="onboarding_title_3">Stärke dein Selbstvertrauen beim Englischsprechen</string>
-    <string name="onboarding_description_3">Starte jetzt und gewinne Selbstvertrauen beim Englischsprechen.</string>
+    <string name="onboarding_title_1">Willkommen bei \nUrVoice</string>
+    <string name="onboarding_description_1">Wir bieten eine englische Spracherkennung und Grammatikprüfung, um dir zu helfen, deine öffentlichen Sprechfähigkeiten zu verbessern.</string>
+    <string name="onboarding_title_2">Eine App zur Analyse deiner Sprechfähigkeiten</string>
+    <string name="onboarding_description_2">Analysiere deine Sprechfähigkeiten mit generativer KI.</string>
+    <string name="onboarding_title_3">Lass uns dein Englisch-Selbstvertrauen stärken</string>
+    <string name="onboarding_description_3">Beginne jetzt und stärke dein Vertrauen beim Englischsprechen.</string>
     <string name="button_start_now">Jetzt starten</string>
     <string name="button_back">Zurück</string>
     <string name="button_next">Weiter</string>
     <string name="register_title">Hier registrieren</string>
-    <string name="register_description">Erstelle ein Konto und beginne mit der Analyse deiner Englischkenntnisse.</string>
-    <string name="login_title">Hier einloggen</string>
-    <string name="login_description">Willkommen zurück,\nbitte einloggen</string>
+    <string name="register_description">Erstelle ein Konto und beginne mit der Analyse deiner Englisch-Sprechfähigkeiten.</string>
+    <string name="login_title">Anmeldung</string>
+    <string name="login_description">Willkommen zurück,\nbitte melde dich an</string>
     <string name="name_label">Name</string>
     <string name="email_label">E-Mail</string>
     <string name="password_label">Passwort</string>
-    <string name="login_button">Einloggen</string>
+    <string name="login_button">Anmelden</string>
     <string name="register_button">Registrieren</string>
     <string name="name_empty_error">Name darf nicht leer sein</string>
     <string name="email_empty_error">E-Mail darf nicht leer sein</string>
-    <string name="email_invalid_error">Ungültiges E-Mail-Format</string>
+    <string name="email_invalid_error">Ungültige E-Mail-Adresse</string>
     <string name="password_empty_error">Passwort darf nicht leer sein</string>
-    <string name="password_min_length_error">Passwort muss mindestens 8 Zeichen lang sein</string>
-    <string name="name_min_length_error">Name muss mindestens 3 Zeichen lang sein</string>
-    <string name="register_link">Noch kein Konto? Hier registrieren</string>
-    <string name="login_link">Schon ein Konto? Hier einloggen</string>
+    <string name="password_min_length_error">Passwort muss mindestens 8 Zeichen haben</string>
+    <string name="name_min_length_error">Name muss mindestens 3 Zeichen haben</string>
+    <string name="register_link">Noch kein Konto? Jetzt registrieren</string>
+    <string name="login_link">Bereits ein Konto? Jetzt anmelden</string>
     <string name="hide_password">Passwort ausblenden</string>
     <string name="show_password">Passwort anzeigen</string>
-    <string name="token_save_failed">Token konnte nicht gespeichert werden, nicht gefunden.</string>
+    <string name="token_save_failed">Token konnte nicht gespeichert werden. Token nicht gefunden.</string>
     <string name="onboarding_image_desc">Onboarding-Bild</string>
     <string name="article_image_desc">Artikelbild</string>
     <string name="article_home_title">Lies englische Artikel, um deine Fähigkeiten zu verbessern</string>
-    <string name="update_history_title_home">Neueste Historie</string>
+    <string name="update_history_title_home">Letzte Historie</string>
     <string name="menu_article_title">Artikel</string>
     <string name="nodata_article_title">Keine Artikeldaten</string>
     <string name="menu_profile_title">Profil</string>
     <string name="speech_to_text_title">Sprache zu Text</string>
     <string name="record_title">Aufnehmen</string>
-    <string name="back">Schließen-Symbol</string>
+    <string name="back">Schließen</string>
     <string name="button_retry_record">Erneut aufnehmen</string>
     <string name="button_analyze_grammar">Analysieren</string>
-    <string name="example_speech_to_text">Dies ist ein Beispielinhalt für die Funktion Sprache zu Text.</string>
+    <string name="example_speech_to_text">Dies ist ein Beispielinhalt für die Sprache-zu-Text-Funktion.</string>
     <string name="article_detail_title">Artikeldetails</string>
     <string name="edit_profile_title">Profil bearbeiten</string>
     <string name="edit_name_title">Name</string>
@@ -51,33 +50,33 @@
     <string name="user_email">Gib deine E-Mail ein</string>
     <string name="edit_password_title">Passwort</string>
     <string name="save">Speichern</string>
-    <string name="success">Erfolg</string>
+    <string name="success">Erfolgreich</string>
     <string name="save_profile_success">Profil erfolgreich gespeichert!</string>
     <string name="ok">OK</string>
     <string name="setting_profile_title">Einstellungen</string>
     <string name="sign_out">Abmelden</string>
-    <string name="sign_out_confirmation">Abmeldebestätigung</string>
+    <string name="sign_out_confirmation">Abmeldung bestätigen</string>
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
-    <string name="sign_out_message">Möchtest du dich wirklich abmelden?</string>
+    <string name="sign_out_message">Bist du sicher, dass du dich abmelden möchtest?</string>
     <string name="cancel">Abbrechen</string>
     <string name="delete_account">Konto löschen</string>
-    <string name="delete_account_message">Möchtest du dein Konto wirklich löschen?</string>
+    <string name="delete_account_message">Bist du sicher, dass du dein Konto löschen möchtest?</string>
     <string name="language">Sprache</string>
-    <string name="email_not_registered_title">Benutzer nicht gefunden</string>
-    <string name="email_not_registered_message">Bitte registriere deine E-Mail-Adresse</string>
+    <string name="email_not_registered_title">Benutzer existiert nicht</string>
+    <string name="email_not_registered_message">Bitte registriere deine E-Mail</string>
     <string name="register_now">Jetzt registrieren</string>
     <string name="register_failed">Registrierung fehlgeschlagen</string>
     <string name="account_already_exists_title">Konto existiert bereits</string>
-    <string name="account_already_exists_message">Dein Konto ist bereits registriert. Bitte logge dich ein!</string>
-    <string name="login_now">Jetzt einloggen</string>
+    <string name="account_already_exists_message">Dein Konto ist bereits registriert. Bitte melde dich an!</string>
+    <string name="login_now">Jetzt anmelden</string>
     <string name="corrected_paragraph_title">Korrigierter Absatz:</string>
     <string name="no_correction_available">Keine Korrekturen verfügbar</string>
-    <string name="grammar_analysis_title">Grammatik-Analyse:</string>
+    <string name="grammar_analysis_title">Grammatikanalyse:</string>
     <string name="analisis_title">Analyse</string>
-    <string name="button_save_analyze">Analyse speichern</string>
-    <string name="menu_history_title">Verlauf</string>
-    <string name="go_detail_description">Zur Detailansicht</string>
+    <string name="button_save_analyze">Speichern</string>
+    <string name="menu_history_title">Historie</string>
+    <string name="go_detail_description">Zu Details gehen</string>
     <string name="loading_audio">Wird abgespielt...</string>
     <string name="pause_audio">⏸ Pause</string>
     <string name="failed_play_audio">Fehlgeschlagen</string>
@@ -86,51 +85,63 @@
     <string name="audio_recording">Audioaufnahme</string>
     <string name="original_paragraph_title">Originalabsatz:</string>
     <string name="no_content_available">Kein Inhalt verfügbar</string>
-    <string name="nodata_history_title">Noch kein Verlauf</string>
+    <string name="nodata_history_title">Noch keine Historie</string>
     <string name="error">Fehler</string>
-    <string name="invalid_image_file">Ungültige Bilddatei</string>
+    <string name="invalid_image_file">Ungültiges Bild</string>
     <string name="edit_profile_image">Profilbild bearbeiten</string>
     <string name="image_preview_description">Bildvorschau</string>
-    <string name="preview_image">Bildvorschau</string>
-    <string name="invalid_image_format">Ungültiges Format</string>
+    <string name="preview_image">Vorschau</string>
+    <string name="invalid_image_format">Ungültiges Bildformat</string>
     <string name="image_too_large">Bild ist zu groß</string>
     <string name="image_processing_error">Bildverarbeitung fehlgeschlagen</string>
     <string name="upload_failed">Upload fehlgeschlagen</string>
-    <string name="uploading">Wird hochgeladen</string>
-    <string name="upload_success">Erfolgreich hochgeladen</string>
-    <string name="retry_upload">Erneut hochladen</string>
+    <string name="uploading">Lade hoch...</string>
+    <string name="upload_success">Upload erfolgreich</string>
+    <string name="retry_upload">Erneut versuchen</string>
     <string name="upload_image_success">Bild erfolgreich hochgeladen</string>
     <string name="upload_image">Bild hochladen</string>
-    <string name="no_original_text">Kein Originaltext verfügbar</string>
-    <string name="no_corrected_text">Keine Korrektur verfügbar</string>
+    <string name="no_original_text">Kein Originaltext</string>
+    <string name="no_corrected_text">Kein korrigierter Text</string>
     <string name="no_reason_text">Kein Grund verfügbar</string>
     <string name="original">Original:</string>
-    <string name="corrected">Korrigiert:</string>
+    <string name="corrected">Korrektur:</string>
     <string name="reason">Grund:</string>
     <string name="rekaman_audio">Audioaufnahme:</string>
     <string name="article_arrow_desc">Artikel-Symbol</string>
     <string name="no_image_available">Kein Bild verfügbar</string>
     <string name="profile_image_desc">Profilbild</string>
-    <string name="saving_progress">Wird gespeichert...</string>
+    <string name="saving_progress">Speichere...</string>
     <string name="saved">Gespeichert!</string>
     <string name="failed_save">Speichern fehlgeschlagen</string>
     <string name="error_title">Ein Fehler ist aufgetreten</string>
-    <string name="retry">Wiederholen</string>
+    <string name="retry">Erneut versuchen</string>
     <string name="no_title">Kein Titel</string>
-    <string name="no_content">Beschreibung nicht verfügbar</string>
-    <string name="error_history_title">Ein Fehler ist aufgetreten</string>
+    <string name="no_content">Keine Beschreibung verfügbar</string>
+    <string name="error_history_title">Fehler aufgetreten</string>
     <string name="profile_preview_image">Bildvorschau</string>
     <string name="unknown_name">Unbekannter Benutzer</string>
     <string name="no_email_provided">Keine E-Mail</string>
     <string name="navigate_forward">Pfeil</string>
-    <string name="audio_permission">Mikrofonberechtigung ist zum Aufnehmen erforderlich. Tippe auf das Mikrofonsymbol, um zu erlauben.</string>
-    <string name="recording_in_progress">🔴 Aufnahme läuft... (Tippen zum Stoppen)</string>
-    <string name="loading_transcription">⏳ Audio wird in Text umgewandelt...</string>
-    <string name="record_instructions">Tippe auf das Mikrofonsymbol, um die Aufnahme zu starten</string>
+    <string name="audio_permission">Mikrofonberechtigung erforderlich. Tippe auf das Mikrofonsymbol, um zu erlauben.</string>
+    <string name="recording_in_progress">🔴 Aufnahme läuft... (Zum Stoppen tippen)</string>
+    <string name="loading_transcription">⏳ Transkription wird verarbeitet...</string>
+    <string name="record_instructions">Tippe auf das Mikrofon, um die Aufnahme zu starten</string>
     <string name="record_success_title">Aufnahme erfolgreich!</string>
     <string name="transcription_confirmation_text">Möchtest du dies in Text umwandeln?</string>
     <string name="retry_record_title">Erneut aufnehmen</string>
-    <string name="sign_title">Stärke dein Selbstvertrauen beim Englischsprechen</string>
-    <string name="sign_desc">Mache mit und trainiere deine Sprachfähigkeiten – mache Englisch zu deiner Stärke!</string>
-    <string name="link_article">Artikel-Link</string>
+    <string name="sign_title">Lass uns dein Englisch-Selbstvertrauen stärken</string>
+    <string name="sign_desc">Tritt jetzt bei und verbessere deine Sprechfähigkeiten!</string>
+    <string name="link_article">Artikellink</string>
+
+    <string name="Ayo">batombe_1</string>
+    <string name="batombe_desc_1">Beginne deine Reise mit einem persönlichen Batombe.</string>
+    <string name="batombe_title_1">Erstelle dein eigenes Batombe basierend auf Stimmung und Thema!</string>
+    <string name="batombe_title_2">Willkommen in der Rima Batombe App</string>
+    <string name="batombe_title_3">Was ist Batombe?</string>
+    <string name="batombe_desc_2">Rima Batombe nutzt generative KI, um Batombe-Strophen basierend auf Stimmung und Thema zu erstellen.</string>
+    <string name="batombe_desc_3">Batombe ist eine Form mündlicher Dichtung aus Nagari Abai, Süd-Solok, Westsumatra, bei der zwei oder mehr Gruppen poetische Verse austauschen.</string>
+
+    <string name="pantun_text_title">Batombe-Strophen</string>
+    <string name="menu_feed_title">Feed</string>
+    <string name="nodata_feed_title">Keine Daten</string>
 </resources>
