--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,17 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Rima Batombe</string>
-    <string name="onboarding_title_1">ようこそ\nUrVoiceへ</string>
-    <string name="onboarding_description_1">英語の音声認識と文法修正を提供し、英語でのスピーキングスキル向上をサポートします。</string>
-    <string name="onboarding_title_2">話すスキルを分析するアプリ</string>
-    <string name="onboarding_description_2">生成AI技術を使ってスピーキングを分析します。</string>
-    <string name="onboarding_title_3">英会話の自信を高めましょう</string>
-    <string name="onboarding_description_3">今すぐ始めて、英語を話す自信をつけましょう。</string>
+    <string name="onboarding_title_1">ようこそ \nUrVoice へ</string>
+    <string name="onboarding_description_1">英語のスピーチを文字起こしし、文法を修正することで、あなたの英語スピーキング能力の向上をサポートします。</string>
+    <string name="onboarding_title_2">スピーキング能力を分析するアプリ</string>
+    <string name="onboarding_description_2">生成AI技術を使ってあなたのスピーキングを分析します。</string>
+    <string name="onboarding_title_3">英語スピーキングの自信を高めましょう</string>
+    <string name="onboarding_description_3">今すぐ始めて、英語を話す自信を高めましょう。</string>
     <string name="button_start_now">今すぐ始める</string>
     <string name="button_back">戻る</string>
     <string name="button_next">次へ</string>
-    <string name="register_title">新規登録</string>
-    <string name="register_description">アカウントを作成して、英語のスピーキングスキルを分析しましょう。</string>
+    <string name="register_title">登録はこちら</string>
+    <string name="register_description">アカウントを作成して、英語スピーキングの分析を始めましょう。</string>
     <string name="login_title">ログイン</string>
     <string name="login_description">お帰りなさい。\nログインしてください。</string>
     <string name="name_label">名前</string>
@@ -21,12 +20,12 @@
     <string name="register_button">登録</string>
     <string name="name_empty_error">名前を入力してください</string>
     <string name="email_empty_error">メールアドレスを入力してください</string>
-    <string name="email_invalid_error">無効なメール形式です</string>
+    <string name="email_invalid_error">メールアドレスの形式が正しくありません</string>
     <string name="password_empty_error">パスワードを入力してください</string>
-    <string name="password_min_length_error">パスワードは8文字以上で入力してください</string>
-    <string name="name_min_length_error">名前は3文字以上で入力してください</string>
-    <string name="register_link">アカウントをお持ちでないですか？こちらから登録</string>
-    <string name="login_link">すでにアカウントをお持ちですか？こちらからログイン</string>
+    <string name="password_min_length_error">パスワードは8文字以上必要です</string>
+    <string name="name_min_length_error">名前は3文字以上必要です</string>
+    <string name="register_link">アカウントがありませんか？ こちらから登録</string>
+    <string name="login_link">すでにアカウントをお持ちですか？ ログイン</string>
     <string name="hide_password">パスワードを隠す</string>
     <string name="show_password">パスワードを表示</string>
     <string name="token_save_failed">トークンの保存に失敗しました。トークンが見つかりません。</string>
@@ -39,11 +38,11 @@
     <string name="menu_profile_title">プロフィール</string>
     <string name="speech_to_text_title">音声からテキストへ</string>
     <string name="record_title">録音</string>
-    <string name="back">閉じるアイコン</string>
+    <string name="back">閉じる</string>
     <string name="button_retry_record">再録音</string>
     <string name="button_analyze_grammar">分析する</string>
-    <string name="example_speech_to_text">これは音声からテキスト機能のサンプルカード内容です。</string>
-    <string name="article_detail_title">記事の詳細</string>
+    <string name="example_speech_to_text">これは音声からテキスト機能のサンプルカードです。</string>
+    <string name="article_detail_title">記事詳細</string>
     <string name="edit_profile_title">プロフィール編集</string>
     <string name="edit_name_title">名前</string>
     <string name="enter_your_name">名前を入力してください</string>
@@ -52,14 +51,14 @@
     <string name="edit_password_title">パスワード</string>
     <string name="save">保存</string>
     <string name="success">成功</string>
-    <string name="save_profile_success">プロフィールが正常に保存されました！</string>
+    <string name="save_profile_success">プロフィールが保存されました！</string>
     <string name="ok">OK</string>
     <string name="setting_profile_title">設定</string>
     <string name="sign_out">ログアウト</string>
-    <string name="sign_out_confirmation">ログアウトの確認</string>
+    <string name="sign_out_confirmation">ログアウト確認</string>
     <string name="yes">はい</string>
     <string name="no">いいえ</string>
-    <string name="sign_out_message">本当にログアウトしますか？</string>
+    <string name="sign_out_message">ログアウトしますか？</string>
     <string name="cancel">キャンセル</string>
     <string name="delete_account">アカウント削除</string>
     <string name="delete_account_message">本当にアカウントを削除しますか？</string>
@@ -69,47 +68,47 @@
     <string name="register_now">登録</string>
     <string name="register_failed">登録に失敗しました</string>
     <string name="account_already_exists_title">アカウントはすでに存在します</string>
-    <string name="account_already_exists_message">アカウントはすでに登録されています。ログインしてください！</string>
+    <string name="account_already_exists_message">このメールはすでに登録されています。ログインしてください！</string>
     <string name="login_now">ログイン</string>
-    <string name="corrected_paragraph_title">修正された段落：</string>
+    <string name="corrected_paragraph_title">修正文：</string>
     <string name="no_correction_available">修正はありません</string>
     <string name="grammar_analysis_title">文法分析：</string>
     <string name="analisis_title">分析</string>
-    <string name="button_save_analyze">分析を保存</string>
+    <string name="button_save_analyze">保存</string>
     <string name="menu_history_title">履歴</string>
-    <string name="go_detail_description">詳細へ</string>
+    <string name="go_detail_description">詳細を見る</string>
     <string name="loading_audio">再生中...</string>
     <string name="pause_audio">⏸ 一時停止</string>
-    <string name="failed_play_audio">再生に失敗しました</string>
+    <string name="failed_play_audio">再生失敗</string>
     <string name="play_audio">▶ 再生</string>
-    <string name="history_detail_title">履歴の詳細</string>
+    <string name="history_detail_title">履歴詳細</string>
     <string name="audio_recording">音声録音</string>
-    <string name="original_paragraph_title">元の段落：</string>
-    <string name="no_content_available">内容がありません</string>
-    <string name="nodata_history_title">履歴がありません</string>
+    <string name="original_paragraph_title">元の文章：</string>
+    <string name="no_content_available">利用できる内容がありません</string>
+    <string name="nodata_history_title">履歴はありません</string>
     <string name="error">エラー</string>
-    <string name="invalid_image_file">無効な画像ファイル</string>
+    <string name="invalid_image_file">無効な画像です</string>
     <string name="edit_profile_image">プロフィール画像を編集</string>
     <string name="image_preview_description">画像プレビュー</string>
-    <string name="preview_image">画像をプレビュー</string>
-    <string name="invalid_image_format">無効な形式</string>
-    <string name="image_too_large">画像サイズが大きすぎます</string>
-    <string name="image_processing_error">画像の処理に失敗しました</string>
-    <string name="upload_failed">アップロードに失敗しました</string>
-    <string name="uploading">アップロード中</string>
+    <string name="preview_image">プレビュー</string>
+    <string name="invalid_image_format">無効な画像形式</string>
+    <string name="image_too_large">画像が大きすぎます</string>
+    <string name="image_processing_error">画像処理に失敗しました</string>
+    <string name="upload_failed">アップロード失敗</string>
+    <string name="uploading">アップロード中...</string>
     <string name="upload_success">アップロード成功</string>
-    <string name="retry_upload">再アップロード</string>
+    <string name="retry_upload">再試行</string>
     <string name="upload_image_success">画像が正常にアップロードされました</string>
     <string name="upload_image">画像をアップロード</string>
-    <string name="no_original_text">元のテキストがありません</string>
-    <string name="no_corrected_text">修正はありません</string>
-    <string name="no_reason_text">理由がありません</string>
+    <string name="no_original_text">元のテキストはありません</string>
+    <string name="no_corrected_text">修正文はありません</string>
+    <string name="no_reason_text">理由はありません</string>
     <string name="original">元：</string>
     <string name="corrected">修正：</string>
     <string name="reason">理由：</string>
-    <string name="rekaman_audio">録音：</string>
+    <string name="rekaman_audio">音声録音：</string>
     <string name="article_arrow_desc">記事アイコン</string>
-    <string name="no_image_available">画像がありません</string>
+    <string name="no_image_available">画像なし</string>
     <string name="profile_image_desc">プロフィール画像</string>
     <string name="saving_progress">保存中...</string>
     <string name="saved">保存されました！</string>
@@ -117,20 +116,32 @@
     <string name="error_title">エラーが発生しました</string>
     <string name="retry">再試行</string>
     <string name="no_title">タイトルなし</string>
-    <string name="no_content">説明はありません</string>
+    <string name="no_content">説明なし</string>
     <string name="error_history_title">エラーが発生しました</string>
-    <string name="profile_preview_image">画像プレビュー</string>
+    <string name="profile_preview_image">プレビュー画像</string>
     <string name="unknown_name">不明なユーザー</string>
     <string name="no_email_provided">メールなし</string>
     <string name="navigate_forward">矢印</string>
-    <string name="audio_permission">録音にはマイクの許可が必要です。マイクアイコンをタップして許可してください。</string>
-    <string name="recording_in_progress">🔴 録音中...（タップして停止）</string>
-    <string name="loading_transcription">⏳ 音声からテキストに変換中...</string>
-    <string name="record_instructions">マイクボタンをタップして録音を開始してください</string>
+    <string name="audio_permission">録音するにはマイクの許可が必要です。マイクアイコンをタップして許可してください。</string>
+    <string name="recording_in_progress">🔴 録音中...(タップで停止)</string>
+    <string name="loading_transcription">⏳ 音声をテキストに変換しています...</string>
+    <string name="record_instructions">録音を開始するにはマイクボタンをタップしてください</string>
     <string name="record_success_title">録音成功！</string>
-    <string name="transcription_confirmation_text">この音声をテキストに変換しますか？</string>
+    <string name="transcription_confirmation_text">テキストに変換しますか？</string>
     <string name="retry_record_title">再録音</string>
-    <string name="sign_title">英会話の自信を高めましょう</string>
-    <string name="sign_desc">今すぐ参加して、スピーキングスキルを磨き、英語をあなたの強みにしましょう！</string>
+    <string name="sign_title">英語スピーキングの自信を高めましょう</string>
+    <string name="sign_desc">今すぐ参加して、スピーキング力を鍛えよう！</string>
     <string name="link_article">記事リンク</string>
+
+    <string name="Ayo">batombe_1</string>
+    <string name="batombe_desc_1">あなた自身を表現するバトンべで旅を始めましょう。</string>
+    <string name="batombe_title_1">感情やテーマに合わせてあなたのバトンべを生成しよう！</string>
+    <string name="batombe_title_2">Rima Batombe へようこそ</string>
+    <string name="batombe_title_3">バトンべとは？</string>
+    <string name="batombe_desc_2">Rima Batombe は、感情やテーマに応じてバトンべの詩を生成するAIアプリです。</string>
+    <string name="batombe_desc_3">バトンべは、西スマトラ州ソロク南部アバイ村に伝わる口承文学で、2つ以上のグループが掛け合いの詩を披露する伝統文化です。</string>
+
+    <string name="pantun_text_title">バトンべ詩</string>
+    <string name="menu_feed_title">投稿</string>
+    <string name="nodata_feed_title">データなし</string>
 </resources>
