--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,136 +1,207 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Rima Batombe</string>
-    <string name="onboarding_title_1">Добро пожаловать в\nUrVoice</string>
-    <string name="onboarding_description_1">Мы предоставляем распознавание речи и проверку грамматики на английском языке, чтобы помочь вам улучшить навыки публичных выступлений.</string>
-    <string name="onboarding_title_2">Приложение для анализа ваших навыков речи</string>
-    <string name="onboarding_description_2">Анализируйте свою речь с помощью генеративного ИИ.</string>
-    <string name="onboarding_title_3">Укрепите уверенность в английской речи</string>
-    <string name="onboarding_description_3">Начните сейчас и повышайте уверенность в общении на английском.</string>
+    <string name="app_name">Рима Батомбэ</string>
+
+    <string name="onboarding_title_1">Добро пожаловать в \nUrVoice</string>
+    <string name="onboarding_description_1">Мы помогаем улучшить ваши навыки английской речи, преобразуя речь в текст и исправляя грамматику.</string>
+
+    <string name="onboarding_title_2">Приложение для анализа речи</string>
+    <string name="onboarding_description_2">С помощью технологий генеративного ИИ мы анализируем вашу речь.</string>
+
+    <string name="onboarding_title_3">Повышайте уверенность в английской речи</string>
+    <string name="onboarding_description_3">Начните сейчас и укрепите уверенность в разговорном английском.</string>
+
     <string name="button_start_now">Начать сейчас</string>
     <string name="button_back">Назад</string>
     <string name="button_next">Далее</string>
-    <string name="register_title">Зарегистрироваться</string>
-    <string name="register_description">Создайте аккаунт и начните анализировать свои навыки английской речи.</string>
+
+    <string name="register_title">Регистрация</string>
+    <string name="register_description">Создайте аккаунт и начните анализировать свою английскую речь.</string>
+
     <string name="login_title">Вход</string>
-    <string name="login_description">С возвращением,\nпожалуйста, войдите в систему</string>
+    <string name="login_description">С возвращением。\nПожалуйста, войдите.</string>
+
     <string name="name_label">Имя</string>
-    <string name="email_label">Эл. почта</string>
+    <string name="email_label">Электронная почта</string>
     <string name="password_label">Пароль</string>
+
     <string name="login_button">Войти</string>
     <string name="register_button">Зарегистрироваться</string>
-    <string name="name_empty_error">Имя не может быть пустым</string>
-    <string name="email_empty_error">Эл. почта не может быть пустой</string>
-    <string name="email_invalid_error">Неверный формат эл. почты</string>
-    <string name="password_empty_error">Пароль не может быть пустым</string>
+
+    <string name="name_empty_error">Пожалуйста, введите имя</string>
+    <string name="email_empty_error">Пожалуйста, введите электронную почту</string>
+    <string name="email_invalid_error">Неверный формат электронной почты</string>
+    <string name="password_empty_error">Пожалуйста, введите пароль</string>
     <string name="password_min_length_error">Пароль должен содержать не менее 8 символов</string>
     <string name="name_min_length_error">Имя должно содержать не менее 3 символов</string>
+
     <string name="register_link">Нет аккаунта? Зарегистрируйтесь здесь</string>
-    <string name="login_link">Уже есть аккаунт? Войдите здесь</string>
+    <string name="login_link">Уже есть аккаунт? Войти</string>
+
     <string name="hide_password">Скрыть пароль</string>
     <string name="show_password">Показать пароль</string>
+
     <string name="token_save_failed">Не удалось сохранить токен. Токен не найден.</string>
-    <string name="onboarding_image_desc">Изображение приветствия</string>
+
+    <string name="onboarding_image_desc">Изображение onboarding</string>
     <string name="article_image_desc">Изображение статьи</string>
-    <string name="article_home_title">Читайте статьи на английском, чтобы улучшить навыки</string>
-    <string name="update_history_title_home">Последняя история</string>
-    <string name="menu_article_title">Статья</string>
+
+    <string name="article_home_title">Читайте статьи на английском и улучшайте навыки</string>
+    <string name="update_history_title_home">Последние записи</string>
+    <string name="menu_article_title">Статьи</string>
     <string name="nodata_article_title">Нет данных статей</string>
+
     <string name="menu_profile_title">Профиль</string>
+
     <string name="speech_to_text_title">Речь в текст</string>
     <string name="record_title">Запись</string>
-    <string name="back">Иконка закрытия</string>
-    <string name="button_retry_record">Повторить запись</string>
+    <string name="back">Закрыть</string>
+    <string name="button_retry_record">Перезаписать</string>
     <string name="button_analyze_grammar">Анализировать</string>
-    <string name="example_speech_to_text">Это пример содержимого карточки для функции "Речь в текст".</string>
+
+    <string name="example_speech_to_text">Это образец карточки функции «Речь в текст».</string>
+
     <string name="article_detail_title">Детали статьи</string>
+
     <string name="edit_profile_title">Редактировать профиль</string>
     <string name="edit_name_title">Имя</string>
-    <string name="enter_your_name">Введите ваше имя</string>
-    <string name="edit_email_title">Эл. почта</string>
-    <string name="user_email">Введите вашу эл. почту</string>
+    <string name="enter_your_name">Введите имя</string>
+
+    <string name="edit_email_title">Электронная почта</string>
+    <string name="user_email">Введите электронную почту</string>
+
     <string name="edit_password_title">Пароль</string>
     <string name="save">Сохранить</string>
-    <string name="success">Успешно</string>
+    <string name="success">Успех</string>
     <string name="save_profile_success">Профиль успешно сохранён!</string>
-    <string name="ok">ОК</string>
+    <string name="ok">OK</string>
+
     <string name="setting_profile_title">Настройки</string>
+
     <string name="sign_out">Выйти</string>
     <string name="sign_out_confirmation">Подтверждение выхода</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
-    <string name="sign_out_message">Вы уверены, что хотите выйти?</string>
+    <string name="sign_out_message">Вы действительно хотите выйти?</string>
     <string name="cancel">Отмена</string>
+
     <string name="delete_account">Удалить аккаунт</string>
-    <string name="delete_account_message">Вы уверены, что хотите удалить свой аккаунт?</string>
+    <string name="delete_account_message">Вы уверены, что хотите удалить аккаунт?</string>
+
     <string name="language">Язык</string>
+
     <string name="email_not_registered_title">Пользователь не найден</string>
-    <string name="email_not_registered_message">Пожалуйста, зарегистрируйте эл. почту</string>
+    <string name="email_not_registered_message">Пожалуйста, зарегистрируйте электронную почту</string>
     <string name="register_now">Зарегистрироваться</string>
+
     <string name="register_failed">Ошибка регистрации</string>
+
     <string name="account_already_exists_title">Аккаунт уже существует</string>
-    <string name="account_already_exists_message">Ваш аккаунт уже зарегистрирован. Пожалуйста, войдите!</string>
+    <string name="account_already_exists_message">Этот email уже зарегистрирован. Войдите!</string>
+
     <string name="login_now">Войти</string>
-    <string name="corrected_paragraph_title">Исправленный абзац:</string>
+
+    <string name="corrected_paragraph_title">Исправленный текст：</string>
     <string name="no_correction_available">Нет исправлений</string>
-    <string name="grammar_analysis_title">Грамматический анализ:</string>
+    <string name="grammar_analysis_title">Грамматический анализ：</string>
     <string name="analisis_title">Анализ</string>
-    <string name="button_save_analyze">Сохранить анализ</string>
+
+    <string name="button_save_analyze">Сохранить</string>
     <string name="menu_history_title">История</string>
-    <string name="go_detail_description">Перейти к деталям</string>
+
+    <string name="go_detail_description">Подробнее</string>
+
     <string name="loading_audio">Воспроизведение...</string>
     <string name="pause_audio">⏸ Пауза</string>
     <string name="failed_play_audio">Ошибка воспроизведения</string>
     <string name="play_audio">▶ Воспроизвести</string>
-    <string name="history_detail_title">Детали истории</string>
+
+    <string name="history_detail_title">Детали записи</string>
     <string name="audio_recording">Аудиозапись</string>
-    <string name="original_paragraph_title">Исходный абзац:</string>
-    <string name="no_content_available">Нет содержимого</string>
-    <string name="nodata_history_title">История пока отсутствует</string>
+
+    <string name="original_paragraph_title">Оригинал：</string>
+    <string name="no_content_available">Нет доступного содержимого</string>
+    <string name="nodata_history_title">Нет истории</string>
+
     <string name="error">Ошибка</string>
-    <string name="invalid_image_file">Неверный файл изображения</string>
-    <string name="edit_profile_image">Редактировать изображение профиля</string>
+    <string name="invalid_image_file">Недопустимое изображение</string>
+
+    <string name="edit_profile_image">Редактировать фото профиля</string>
     <string name="image_preview_description">Предпросмотр изображения</string>
     <string name="preview_image">Предпросмотр</string>
-    <string name="invalid_image_format">Неверный формат</string>
+
+    <string name="invalid_image_format">Недопустимый формат изображения</string>
     <string name="image_too_large">Изображение слишком большое</string>
     <string name="image_processing_error">Ошибка обработки изображения</string>
+
     <string name="upload_failed">Ошибка загрузки</string>
     <string name="uploading">Загрузка...</string>
-    <string name="upload_success">Загрузка прошла успешно</string>
-    <string name="retry_upload">Повторить загрузку</string>
+    <string name="upload_success">Загрузка успешна</string>
+    <string name="retry_upload">Повторить</string>
+
     <string name="upload_image_success">Изображение успешно загружено</string>
     <string name="upload_image">Загрузить изображение</string>
-    <string name="no_original_text">Исходный текст отсутствует</string>
-    <string name="no_corrected_text">Нет исправлений</string>
+
+    <string name="no_original_text">Нет оригинального текста</string>
+    <string name="no_corrected_text">Нет исправленного текста</string>
     <string name="no_reason_text">Нет объяснения</string>
-    <string name="original">Оригинал:</string>
-    <string name="corrected">Исправлено:</string>
-    <string name="reason">Причина:</string>
-    <string name="rekaman_audio">Аудиозапись:</string>
+
+    <string name="original">Оригинал：</string>
+    <string name="corrected">Исправлено：</string>
+    <string name="reason">Причина：</string>
+
+    <string name="rekaman_audio">Аудиозапись：</string>
+
     <string name="article_arrow_desc">Иконка статьи</string>
-    <string name="no_image_available">Изображение недоступно</string>
+    <string name="no_image_available">Нет изображения</string>
     <string name="profile_image_desc">Изображение профиля</string>
+
     <string name="saving_progress">Сохранение...</string>
     <string name="saved">Сохранено!</string>
     <string name="failed_save">Ошибка сохранения</string>
+
     <string name="error_title">Произошла ошибка</string>
     <string name="retry">Повторить</string>
-    <string name="no_title">Без заголовка</string>
-    <string name="no_content">Описание недоступно</string>
+
+    <string name="no_title">Без названия</string>
+    <string name="no_content">Нет описания</string>
+
     <string name="error_history_title">Произошла ошибка</string>
+
     <string name="profile_preview_image">Предпросмотр изображения</string>
+
     <string name="unknown_name">Неизвестный пользователь</string>
-    <string name="no_email_provided">Эл. почта отсутствует</string>
+    <string name="no_email_provided">Нет email</string>
+
     <string name="navigate_forward">Стрелка</string>
-    <string name="audio_permission">Для записи требуется разрешение на микрофон. Нажмите на иконку микрофона для разрешения.</string>
-    <string name="recording_in_progress">🔴 Запись... (нажмите для остановки)</string>
-    <string name="loading_transcription">⏳ Обработка аудио в текст...</string>
+
+    <string name="audio_permission">Для записи требуется доступ к микрофону. Нажмите на иконку микрофона, чтобы разрешить доступ.</string>
+    <string name="recording_in_progress">🔴 Запись...(нажмите, чтобы остановить)</string>
+    <string name="loading_transcription">⏳ Преобразование речи в текст...</string>
+
     <string name="record_instructions">Нажмите кнопку микрофона, чтобы начать запись</string>
+
     <string name="record_success_title">Запись успешна!</string>
-    <string name="transcription_confirmation_text">Хотите преобразовать это в текст?</string>
-    <string name="retry_record_title">Повторить запись</string>
-    <string name="sign_title">Укрепите уверенность в английской речи</string>
-    <string name="sign_desc">Присоединяйтесь сейчас, тренируйте свои речевые навыки и сделайте английский своей сильной стороной!</string>
-    <string name="link_article">Ссылка</string>
+
+    <string name="transcription_confirmation_text">Преобразовать в текст?</string>
+
+    <string name="retry_record_title">Перезаписать</string>
+
+    <string name="sign_title">Укрепляйте уверенность в английской речи</string>
+    <string name="sign_desc">Присоединяйтесь сейчас и улучшайте навыки говорения!</string>
+
+    <string name="link_article">Ссылка на статью</string>
+
+    <string name="Ayo">batombe_1</string>
+    <string name="batombe_desc_1">Начните путешествие Батомбэ, выражая самого себя.</string>
+    <string name="batombe_title_1">Создавайте свои Батомбэ в соответствии с эмоциями и темами!</string>
+    <string name="batombe_title_2">Добро пожаловать в Рима Батомбэ</string>
+    <string name="batombe_title_3">Что такое Батомбэ?</string>
+
+    <string name="batombe_desc_2">Рима Батомбэ — это приложение ИИ, которое создает поэзию Батомбэ в соответствии с эмоциями и темами.</string>
+    <string name="batombe_desc_3">Батомбэ — устная традиция деревни Абаи, Южный Солок, Западная Суматра, где две или более группы поочередно исполняют стихотворный диалог.</string>
+
+    <string name="pantun_text_title">Поэзия Батомбэ</string>
+
+    <string name="menu_feed_title">Посты</string>
+    <string name="nodata_feed_title">Нет данных</string>
 </resources>
