--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,136 +1,208 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Rima Batombe</string>
-    <string name="onboarding_title_1">欢迎使用\nUrVoice</string>
-    <string name="onboarding_description_1">我们提供英语语音转文字和语法纠正，帮助您提升英语演讲能力。</string>
-    <string name="onboarding_title_2">一个分析你口语能力的应用</string>
-    <string name="onboarding_description_2">使用生成式人工智能技术分析你的口语。</string>
-    <string name="onboarding_title_3">提升你的英语口语自信</string>
-    <string name="onboarding_description_3">现在开始，增强你说英语的信心。</string>
+
+    <string name="onboarding_title_1">欢迎来到 \nUrVoice</string>
+    <string name="onboarding_description_1">我们提供英语语音转文字和语法纠正，帮助您提升英文演讲能力。</string>
+
+    <string name="onboarding_title_2">一款分析口语能力的应用程序</string>
+    <string name="onboarding_description_2">使用生成式人工智能技术分析您的英语口语。</string>
+
+    <string name="onboarding_title_3">让我们提升您的英语口语自信</string>
+    <string name="onboarding_description_3">现在开始，提高您说英语的自信。</string>
+
     <string name="button_start_now">立即开始</string>
     <string name="button_back">返回</string>
     <string name="button_next">下一步</string>
-    <string name="register_title">立即注册</string>
-    <string name="register_description">创建账户，开始分析你的英语口语能力。</string>
+
+    <string name="register_title">注册</string>
+    <string name="register_description">创建账户并开始制作属于您的 Batombe。</string>
+
     <string name="login_title">登录</string>
     <string name="login_description">欢迎回来，\n请登录</string>
+
     <string name="name_label">姓名</string>
-    <string name="email_label">电子邮件</string>
+    <string name="email_label">邮箱</string>
     <string name="password_label">密码</string>
+
     <string name="login_button">登录</string>
     <string name="register_button">注册</string>
+
     <string name="name_empty_error">姓名不能为空</string>
-    <string name="email_empty_error">电子邮件不能为空</string>
-    <string name="email_invalid_error">电子邮件格式无效</string>
+    <string name="email_empty_error">邮箱不能为空</string>
+    <string name="email_invalid_error">邮箱格式无效</string>
     <string name="password_empty_error">密码不能为空</string>
-    <string name="password_min_length_error">密码至少需要8个字符</string>
-    <string name="name_min_length_error">姓名至少需要3个字符</string>
-    <string name="register_link">还没有账号？点此注册</string>
-    <string name="login_link">已有账号？点此登录</string>
+    <string name="password_min_length_error">密码至少需要 8 个字符</string>
+    <string name="name_min_length_error">姓名至少需要 3 个字符</string>
+
+    <string name="register_link">没有账号？在此注册</string>
+    <string name="login_link">已有账号？在此登录</string>
+
     <string name="hide_password">隐藏密码</string>
     <string name="show_password">显示密码</string>
+
     <string name="token_save_failed">保存令牌失败，未找到令牌。</string>
-    <string name="onboarding_image_desc">引导页面图片</string>
+
+    <string name="onboarding_image_desc">引导图片</string>
     <string name="article_image_desc">文章图片</string>
-    <string name="article_home_title">阅读英文文章以提升技能</string>
-    <string name="update_history_title_home">最新历史</string>
+
+    <string name="article_home_title">阅读英语文章以提高您的能力</string>
+    <string name="update_history_title_home">最新记录</string>
     <string name="menu_article_title">文章</string>
     <string name="nodata_article_title">暂无文章数据</string>
+
     <string name="menu_profile_title">个人资料</string>
+
     <string name="speech_to_text_title">语音转文字</string>
     <string name="record_title">录音</string>
     <string name="back">关闭图标</string>
-    <string name="button_retry_record">重试录音</string>
+    <string name="button_retry_record">重新录音</string>
     <string name="button_analyze_grammar">分析</string>
+
     <string name="example_speech_to_text">这是语音转文字功能的示例卡片内容。</string>
+
     <string name="article_detail_title">文章详情</string>
-    <string name="edit_profile_title">编辑资料</string>
+
+    <string name="edit_profile_title">编辑个人资料</string>
     <string name="edit_name_title">姓名</string>
     <string name="enter_your_name">请输入您的姓名</string>
-    <string name="edit_email_title">电子邮件</string>
-    <string name="user_email">请输入您的电子邮件</string>
+
+    <string name="edit_email_title">邮箱</string>
+    <string name="user_email">请输入您的邮箱</string>
+
     <string name="edit_password_title">密码</string>
     <string name="save">保存</string>
     <string name="success">成功</string>
-    <string name="save_profile_success">资料保存成功！</string>
+    <string name="save_profile_success">个人资料保存成功！</string>
     <string name="ok">确定</string>
+
     <string name="setting_profile_title">设置</string>
+
     <string name="sign_out">退出登录</string>
-    <string name="sign_out_confirmation">确认退出</string>
+    <string name="sign_out_confirmation">退出确认</string>
     <string name="yes">是</string>
     <string name="no">否</string>
     <string name="sign_out_message">确定要退出登录吗？</string>
     <string name="cancel">取消</string>
+
     <string name="delete_account">删除账户</string>
-    <string name="delete_account_message">确定要删除你的账户吗？</string>
+    <string name="delete_account_message">确定要删除您的账户吗？</string>
+
     <string name="language">语言</string>
+
     <string name="email_not_registered_title">用户未找到</string>
-    <string name="email_not_registered_message">请注册您的电子邮件</string>
-    <string name="register_now">立即注册</string>
+    <string name="email_not_registered_message">请先注册您的邮箱</string>
+    <string name="register_now">注册</string>
+
     <string name="register_failed">注册失败</string>
+
     <string name="account_already_exists_title">账户已存在</string>
-    <string name="account_already_exists_message">您的账户已注册，请立即登录！</string>
-    <string name="login_now">立即登录</string>
-    <string name="corrected_paragraph_title">修正段落：</string>
-    <string name="no_correction_available">暂无修正内容</string>
+    <string name="account_already_exists_message">此邮箱已注册，请直接登录！</string>
+
+    <string name="login_now">登录</string>
+
+    <string name="corrected_paragraph_title">修正文段：</string>
+    <string name="no_correction_available">无可用修正</string>
     <string name="grammar_analysis_title">语法分析：</string>
     <string name="analisis_title">分析</string>
-    <string name="button_save_analyze">保存分析</string>
+
+    <string name="button_save_analyze">保存</string>
     <string name="menu_history_title">历史记录</string>
+
     <string name="go_detail_description">查看详情</string>
+
     <string name="loading_audio">播放中...</string>
-    <string name="pause_audio">⏸ 暂停播放</string>
+    <string name="pause_audio">⏸ 暂停音频</string>
     <string name="failed_play_audio">播放失败</string>
     <string name="play_audio">▶ 播放音频</string>
-    <string name="history_detail_title">历史详情</string>
+
+    <string name="history_detail_title">记录详情</string>
     <string name="audio_recording">音频录制</string>
-    <string name="original_paragraph_title">原始段落：</string>
-    <string name="no_content_available">暂无内容</string>
+
+    <string name="original_paragraph_title">原文段：</string>
+    <string name="no_content_available">无可用内容</string>
     <string name="nodata_history_title">暂无历史记录</string>
+
     <string name="error">错误</string>
     <string name="invalid_image_file">无效图片</string>
+
     <string name="edit_profile_image">编辑头像</string>
     <string name="image_preview_description">图片预览</string>
     <string name="preview_image">预览图片</string>
-    <string name="invalid_image_format">图片格式无效</string>
-    <string name="image_too_large">图片太大</string>
+
+    <string name="invalid_image_format">格式无效</string>
+    <string name="image_too_large">图片过大</string>
     <string name="image_processing_error">图片处理失败</string>
+
     <string name="upload_failed">上传失败</string>
-    <string name="uploading">正在上传</string>
+    <string name="uploading">正在上传...</string>
     <string name="upload_success">上传成功</string>
-    <string name="retry_upload">重试上传</string>
+    <string name="retry_upload">重新上传</string>
+
     <string name="upload_image_success">图片上传成功</string>
     <string name="upload_image">上传图片</string>
+
     <string name="no_original_text">无原始文本</string>
-    <string name="no_corrected_text">无修正文本</string>
+    <string name="no_corrected_text">无修正内容</string>
     <string name="no_reason_text">无原因说明</string>
+
     <string name="original">原文：</string>
     <string name="corrected">修正：</string>
     <string name="reason">原因：</string>
-    <string name="rekaman_audio">音频录音：</string>
+
+    <string name="rekaman_audio">音频录制：</string>
+
     <string name="article_arrow_desc">文章图标</string>
     <string name="no_image_available">无可用图片</string>
-    <string name="profile_image_desc">头像图片</string>
+    <string name="profile_image_desc">个人头像</string>
+
     <string name="saving_progress">正在保存...</string>
     <string name="saved">已保存！</string>
     <string name="failed_save">保存失败</string>
+
     <string name="error_title">发生错误</string>
     <string name="retry">重试</string>
+
     <string name="no_title">无标题</string>
     <string name="no_content">暂无描述</string>
+
     <string name="error_history_title">发生错误</string>
+
     <string name="profile_preview_image">头像预览</string>
+
     <string name="unknown_name">未知用户</string>
-    <string name="no_email_provided">未提供邮箱</string>
+    <string name="no_email_provided">无邮箱</string>
+
     <string name="navigate_forward">箭头</string>
-    <string name="audio_permission">需要麦克风权限才能录音，请点击麦克风图标以允许。</string>
-    <string name="recording_in_progress">🔴 录音中...(点击停止)</string>
-    <string name="loading_transcription">⏳ 正在将音频转为文字...</string>
-    <string name="record_instructions">点击麦克风按钮开始录音</string>
+
+    <string name="audio_permission">录音需要麦克风权限，请点击麦克风图标授权。</string>
+    <string name="recording_in_progress">🔴 正在录音...(点击停止)</string>
+    <string name="loading_transcription">⏳ 正在将语音转换为文字...</string>
+
+    <string name="record_instructions">点击麦克风开始录音</string>
+
     <string name="record_success_title">录音成功！</string>
-    <string name="transcription_confirmation_text">是否要将此转换为文字？</string>
-    <string name="retry_record_title">重试录音</string>
-    <string name="sign_title">提升你的英语口语自信</string>
-    <string name="sign_desc">立即加入，练习口语技巧，让英语成为你的强项！</string>
+
+    <string name="transcription_confirmation_text">是否将其转换为文字？</string>
+
+    <string name="retry_record_title">重新录音</string>
+
+    <string name="sign_title">让我们提升您的英语口语自信</string>
+    <string name="sign_desc">立即加入，练习口语，让英语成为您的优势！</string>
+
     <string name="link_article">文章链接</string>
+
+    <!-- Batombe Section -->
+    <string name="Ayo">batombe_1</string>
+
+    <string name="batombe_desc_1">以一首反映您自我的 Batombe 开启您的旅程。</string>
+    <string name="batombe_title_1">根据您想要的情绪和主题生成个性化 Batombe！</string>
+    <string name="batombe_title_2">欢迎使用 Rima Batombe 应用</string>
+    <string name="batombe_title_3">什么是 Batombe？</string>
+
+    <string name="batombe_desc_2">Rima Batombe 是一个由生成式人工智能驱动的应用，可根据您的情绪和主题生成 Batombe 诗句。</string>
+    <string name="batombe_desc_3">Batombe 是来自西苏门答腊南索洛克阿拜村的传统口述文学，其核心是一种由两个或多个表演者交替吟诵的诗歌表演。</string>
+
+    <string name="pantun_text_title">Batombe 诗句</string>
+    <string name="menu_feed_title">动态</string>
+    <string name="nodata_feed_title">暂无数据</string>
 </resources>
