--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,18 +1,18 @@
 <resources>
     <string name="app_name">Rima Batombe</string>
     <string name="onboarding_title_1">Selamat Datang di \nUrVoice</string>
-    <string name="onboarding_description_1">Kami menyediakan fitur pengubah suara menjadi teks dalam Bahasa Inggris dan koreksi tata bahasa yang membantu Anda meningkatkan kemampuan berbicara di depan umum dalam Bahasa Inggris.</string>
+    <string name="onboarding_description_1">Kami menyediakan fitur ucap-ke-teks Bahasa Inggris dan koreksi tata bahasa untuk membantu Anda meningkatkan kemampuan public speaking.</string>
     <string name="onboarding_title_2">Aplikasi untuk Menganalisis Kemampuan Berbicara Anda</string>
-    <string name="onboarding_description_2">Analisis kemampuan berbicara Anda dengan teknologi Generative AI.</string>
-    <string name="onboarding_title_3">Mari Tingkatkan Kepercayaan Diri Berbahasa Inggris Anda</string>
-    <string name="onboarding_description_3">Mulailah sekarang dan tingkatkan kepercayaan diri Anda dalam berbicara Bahasa Inggris.</string>
+    <string name="onboarding_description_2">Analisis kemampuan berbicara Anda menggunakan teknologi AI Generatif.</string>
+    <string name="onboarding_title_3">Tingkatkan Kepercayaan Diri Berbicara Bahasa Inggris</string>
+    <string name="onboarding_description_3">Mulailah sekarang dan tingkatkan rasa percaya diri Anda dalam berbahasa Inggris.</string>
     <string name="button_start_now">Mulai Sekarang</string>
     <string name="button_back">Kembali</string>
-    <string name="button_next">Selanjutnya</string>
+    <string name="button_next">Lanjut</string>
     <string name="register_title">Daftar di Sini</string>
-    <string name="register_description">Buat akun dan mulai analisis kemampuan berbicara Bahasa Inggris Anda.</string>
+    <string name="register_description">Buat akun dan mulai buat Batombe anda sendiri.</string>
     <string name="login_title">Masuk di Sini</string>
-    <string name="login_description">Selamat Datang Kembali, \nSilakan Masuk</string>
+    <string name="login_description">Selamat Datang Kembali,\nSilakan Masuk</string>
     <string name="name_label">Nama</string>
     <string name="email_label">Email</string>
     <string name="password_label">Kata Sandi</string>
@@ -30,20 +30,20 @@
     <string name="show_password">Tampilkan kata sandi</string>
     <string name="token_save_failed">Gagal menyimpan token, token tidak ditemukan.</string>
     <string name="onboarding_image_desc">Gambar onboarding</string>
-    <string name="article_image_desc">Gambar Artikel</string>
-    <string name="article_home_title">Mari Membaca Artikel Bahasa Inggris untuk Meningkatkan Kemampuan Anda</string>
+    <string name="article_image_desc">Gambar artikel</string>
+    <string name="article_home_title">Baca artikel Bahasa Inggris untuk meningkatkan kemampuan Anda</string>
     <string name="update_history_title_home">Riwayat Terbaru</string>
     <string name="menu_article_title">Artikel</string>
     <string name="nodata_article_title">Tidak ada data artikel</string>
     <string name="menu_profile_title">Profil</string>
-    <string name="speech_to_text_title">Ubah Suara ke Teks</string>
+    <string name="speech_to_text_title">Ucap ke Teks</string>
     <string name="record_title">Rekam</string>
-    <string name="back">Tutup Ikon</string>
+    <string name="back">Tutup</string>
     <string name="button_retry_record">Rekam Ulang</string>
     <string name="button_analyze_grammar">Analisis</string>
-    <string name="example_speech_to_text">Ini adalah konten kartu untuk fitur Ubah Suara ke Teks.</string>
+    <string name="example_speech_to_text">Ini adalah contoh konten kartu untuk fitur Ucap ke Teks.</string>
     <string name="article_detail_title">Detail Artikel</string>
-    <string name="edit_profile_title">Ubah Profil</string>
+    <string name="edit_profile_title">Edit Profil</string>
     <string name="edit_name_title">Nama</string>
     <string name="enter_your_name">Masukkan nama Anda</string>
     <string name="edit_email_title">Email</string>
@@ -52,91 +52,96 @@
     <string name="save">Simpan</string>
     <string name="success">Berhasil</string>
     <string name="save_profile_success">Profil berhasil disimpan!</string>
-    <string name="ok">Oke</string>
+    <string name="ok">OK</string>
     <string name="setting_profile_title">Pengaturan</string>
     <string name="sign_out">Keluar</string>
     <string name="sign_out_confirmation">Konfirmasi Keluar</string>
-    <string name="yes">Iya</string>
+    <string name="yes">Ya</string>
     <string name="no">Tidak</string>
     <string name="sign_out_message">Apakah Anda yakin ingin keluar?</string>
     <string name="cancel">Batal</string>
     <string name="delete_account">Hapus Akun</string>
-    <string name="delete_account_message">Apakah Anda yakin ingin menghapus akun?</string>
+    <string name="delete_account_message">Apakah Anda yakin ingin menghapus akun Anda?</string>
     <string name="language">Bahasa</string>
     <string name="email_not_registered_title">Pengguna tidak ditemukan</string>
     <string name="email_not_registered_message">Silakan daftarkan email Anda</string>
     <string name="register_now">Daftar</string>
     <string name="register_failed">Pendaftaran Gagal</string>
-    <string name="account_already_exists_title">Akun Sudah Terdaftar</string>
+    <string name="account_already_exists_title">Akun Sudah Ada</string>
     <string name="account_already_exists_message">Akun Anda sudah terdaftar, silakan masuk sekarang!</string>
     <string name="login_now">Masuk</string>
     <string name="corrected_paragraph_title">Paragraf yang Dikoreksi:</string>
-    <string name="no_correction_available">Tidak ada koreksi tersedia</string>
+    <string name="no_correction_available">Tidak ada koreksi</string>
     <string name="grammar_analysis_title">Analisis Tata Bahasa:</string>
     <string name="analisis_title">Analisis</string>
     <string name="button_save_analyze">Simpan</string>
     <string name="menu_history_title">Riwayat</string>
-    <string name="go_detail_description">Lihat Detail</string>
+    <string name="go_detail_description">Pergi ke detail</string>
     <string name="loading_audio">Memutar...</string>
-    <string name="pause_audio">⏸ Jeda Audio</string>
-    <string name="failed_play_audio">Gagal Memutar</string>
+    <string name="pause_audio">⏸ Jeda</string>
+    <string name="failed_play_audio">Gagal</string>
     <string name="play_audio">▶ Putar Audio</string>
     <string name="history_detail_title">Detail Riwayat</string>
     <string name="audio_recording">Rekaman Audio</string>
     <string name="original_paragraph_title">Paragraf Asli:</string>
-    <string name="no_content_available">Konten Tidak Tersedia</string>
-    <string name="nodata_history_title">Belum Ada Riwayat</string>
+    <string name="no_content_available">Tidak Ada Konten</string>
+    <string name="nodata_history_title">Belum ada riwayat</string>
     <string name="error">Kesalahan</string>
-    <string name="invalid_image_file">Berkas gambar tidak valid</string>
-    <string name="edit_profile_image">Ubah Foto Profil</string>
+    <string name="invalid_image_file">Gambar Tidak Valid</string>
+    <string name="edit_profile_image">Edit Gambar Profil</string>
     <string name="image_preview_description">Pratinjau Gambar</string>
-    <string name="preview_image">Lihat Gambar</string>
-    <string name="invalid_image_format">Format Gambar Tidak Valid</string>
-    <string name="image_too_large">Ukuran gambar terlalu besar</string>
+    <string name="preview_image">Pratinjau</string>
+    <string name="invalid_image_format">Format Tidak Valid</string>
+    <string name="image_too_large">Gambar terlalu besar</string>
     <string name="image_processing_error">Gagal memproses gambar</string>
-    <string name="upload_failed">Gagal Mengunggah</string>
+    <string name="upload_failed">Unggahan Gagal</string>
     <string name="uploading">Mengunggah</string>
     <string name="upload_success">Berhasil Diunggah</string>
-    <string name="retry_upload">Ulangi Unggah</string>
+    <string name="retry_upload">Coba Lagi</string>
     <string name="upload_image_success">Gambar berhasil diunggah</string>
     <string name="upload_image">Unggah Gambar</string>
-    <string name="no_original_text">Teks asli tidak tersedia</string>
-    <string name="no_corrected_text">Tidak ada koreksi tersedia</string>
-    <string name="no_reason_text">Tidak ada alasan tersedia</string>
+    <string name="no_original_text">Tidak ada teks asli</string>
+    <string name="no_corrected_text">Tidak ada koreksi</string>
+    <string name="no_reason_text">Tidak ada alasan</string>
     <string name="original">Asli:</string>
-    <string name="corrected">Telah Dikoreksi:</string>
+    <string name="corrected">Koreksi:</string>
     <string name="reason">Alasan:</string>
     <string name="rekaman_audio">Rekaman Audio:</string>
-    <string name="article_arrow_desc">Ikon Arah Artikel</string>
-    <string name="no_image_available">Gambar tidak tersedia</string>
+    <string name="article_arrow_desc">Ikon Artikel</string>
+    <string name="no_image_available">Tidak Ada Gambar</string>
     <string name="profile_image_desc">Gambar Profil</string>
     <string name="saving_progress">Menyimpan...</string>
     <string name="saved">Tersimpan!</string>
-    <string name="failed_save">Gagal menyimpan</string>
+    <string name="failed_save">Gagal Menyimpan</string>
     <string name="error_title">Terjadi Kesalahan</string>
     <string name="retry">Coba Lagi</string>
-    <string name="no_title">Judul tidak tersedia</string>
+    <string name="no_title">Tanpa Judul</string>
     <string name="no_content">Deskripsi tidak tersedia</string>
-    <string name="error_history_title">Kesalahan Terjadi</string>
+    <string name="error_history_title">Terjadi Kesalahan</string>
     <string name="profile_preview_image">Pratinjau Gambar</string>
     <string name="unknown_name">Pengguna Tidak Dikenal</string>
-    <string name="no_email_provided">Email tidak tersedia</string>
-    <string name="navigate_forward">Tombol Navigasi</string>
+    <string name="no_email_provided">Tidak ada email</string>
+    <string name="navigate_forward">Panah</string>
     <string name="audio_permission">Izin mikrofon diperlukan untuk merekam. Ketuk ikon mikrofon untuk mengizinkan.</string>
-    <string name="recording_in_progress">🔴 Sedang merekam... (Ketuk untuk menghentikan)</string>
-    <string name="loading_transcription">⏳ Mengonversi audio menjadi teks...</string>
-    <string name="record_instructions">Ketuk ikon mikrofon untuk mulai merekam</string>
+    <string name="recording_in_progress">🔴 Merekam... (Ketuk untuk menghentikan)</string>
+    <string name="loading_transcription">⏳ Memproses audio ke teks...</string>
+    <string name="record_instructions">Ketuk tombol mikrofon untuk mulai merekam</string>
     <string name="record_success_title">Rekaman Berhasil!</string>
-    <string name="transcription_confirmation_text">Apakah Anda ingin mengonversinya menjadi teks?</string>
+    <string name="transcription_confirmation_text">Apakah Anda ingin mengubah ini menjadi teks?</string>
     <string name="retry_record_title">Rekam Ulang</string>
-    <string name="sign_title">Mari Tingkatkan Kepercayaan Diri Berbahasa Inggris Anda</string>
-    <string name="sign_desc">Bergabunglah sekarang untuk melatih kemampuan berbicara Anda dan jadikan Bahasa Inggris sebagai keunggulan Anda!</string>
+    <string name="sign_title">Tingkatkan Kepercayaan Diri Berbahasa Inggris Anda</string>
+    <string name="sign_desc">Bergabunglah sekarang untuk melatih kemampuan berbicara Anda dan jadikan Bahasa Inggris sebagai kekuatan Anda!</string>
+    <string name="link_article">Tautan Artikel</string>
+
     <string name="Ayo">batombe_1</string>
-    <string name="batombe_desc_1">Mulailah petualanganmu dengan batombe yang mencerminkan siapa dirimu.</string>
+    <string name="batombe_desc_1">Mulailah perjalananmu dengan batombe yang mencerminkan siapa dirimu.</string>
+    <string name="batombe_title_1">Hasilkan batombe pribadi sesuai emosi dan tema yang kamu inginkan!</string>
+    <string name="batombe_title_2">Selamat Datang di Aplikasi Rima Batombe</string>
     <string name="batombe_title_3">Apa itu Batombe?</string>
-    <string name="batombe_desc_3">Batombe adalah salah satu kekayaan sastra lisan dari Nagari Abai, Solok Selatan, Sumatera Barat. Inti dari tradisi ini adalah pertunjukan berbalas pantun antara dua kelompok atau lebih.</string>
+    <string name="batombe_desc_2">Rima Batombe adalah aplikasi berbasis AI generatif untuk menghasilkan pantun batombe sesuai emosi dan tema yang diinginkan.</string>
+    <string name="batombe_desc_3">Batombe adalah tradisi sastra lisan dari Nagari Abai, Solok Selatan, Sumatera Barat. Tradisi ini berupa pertunjukan pantun berbalas antara dua kelompok atau lebih.</string>
+
     <string name="pantun_text_title">Pantun Batombe</string>
-    <string name="batombe_desc_2">GITA Batombe adalah aplikasi berbasis generative AI untuk menghasilkan pantun batombe sesuai dengan emosi dan tema yang di inginkan</string>
     <string name="menu_feed_title">Postingan</string>
-    <string name="nodata_feed_title">No Data</string>
+    <string name="nodata_feed_title">Tidak Ada Data</string>
 </resources>
